<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityClasses.Main.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="@drawable/app2">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded"
            android:id="@+id/startTrackingCV"
            android:onClick="onClickStartTracking"
            app:cardCornerRadius="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/startTrackingTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/startTrackingIV"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/start_tracking"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:typeface="sans"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <ImageView
                    android:id="@+id/startTrackingIV"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@android:drawable/ic_media_play" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/stopTrackingCV"
            android:onClick="onClickStopTracking"
            android:background="@drawable/btn_rounded"
            app:cardCornerRadius="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/stopTrackingTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stopTrackingIV"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/stop_tracking"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:typeface="sans"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <ImageView
                    android:id="@+id/stopTrackingIV"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@android:drawable/ic_media_pause" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/testPathCV"
            android:background="@drawable/btn_rounded"
            app:cardCornerRadius="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/testPathTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/testPathIV"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/test_paths"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:typeface="sans"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <ImageView
                    android:id="@+id/testPathIV"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@android:drawable/ic_dialog_info" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/reportInfectedCV"
            android:background="@drawable/btn_rounded"
            app:cardCornerRadius="30dp"
            android:onClick="onClickReportInfected">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/reportInfectedTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/reportInfectedIV"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/report_infected"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:typeface="sans"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <ImageView
                    android:id="@+id/reportInfectedIV"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@android:drawable/ic_dialog_alert" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

        <!--<Button
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/startTrackingBtn"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded"
            android:onClick="onClickStartTracking"
            android:text="@string/start_tracking"
            android:textColor="@color/colorAccent"
            android:typeface="sans" />

        <Button
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/stopTrackingBtn"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="@color/colorPrimaryLightContrast"
            android:enabled="false"
            android:onClick="onClickStopTracking"
            android:text="@string/stop_tracking"
            android:textColor="@color/colorAccent"
            android:typeface="sans" />
        <Button
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/testPathBtn"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded"
            android:text="@string/test_paths"
            android:textColor="@color/colorAccent"
            android:typeface="sans" />

        <Button
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/reportInfectedBtn"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded"
            android:onClick="onClickReportInfected"
            android:text="@string/report_infected"
            android:textColor="@color/colorAccent"
            android:typeface="sans" />-->

</androidx.constraintlayout.widget.ConstraintLayout>